[package]
name = "nix-rust"
version = "0.1.0"
authors = ["Eelco Dolstra <edolstra@gmail.com>"]
edition = "2018"

[lib]
name = "nixrust"
crate-type = ["cdylib"]

[dependencies]
tar = "0.4"
libc = "0.2"
futures-preview = { version = "=0.3.0-alpha.19", features = ["compat"] }
#hyper = "0.12"
reqwest = { version = "=0.10.0-alpha.2", default-features = false }
http = "0.1"
tokio = { version = "0.2.0-alpha.6", default-features = false, features = ["rt-full"] }
lazy_static = "1.4"
byteorder = "1.3"

[dev-dependencies]
hex = "0.3"
assert_matches = "1.3"
proptest = "0.9"
