[package]
name = "nix-rust"
version = "0.1.0"
authors = ["Eelco Dolstra <edolstra@gmail.com>"]
edition = "2018"

[lib]
name = "nixrust"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
#hyper = "0.13.0-alpha.4"
#http = "0.1"
#tokio = { version = "0.2.0-alpha.6", default-features = false, features = ["rt-full"] }
lazy_static = "1.4"
#byteorder = "1.3"

[dependencies.futures-util]
version = "0.3"
default-features = false
features = ["alloc"]
optional = true

[dev-dependencies]
hex = "0.3"
assert_matches = "1.3"
proptest = "0.9"
