
add_subdirectory(libutil)
add_subdirectory(libexpr)
add_subdirectory(libstore)
add_subdirectory(download-via-ssh)
add_subdirectory(nix-collect-garbage)
add_subdirectory(boost/format)
add_subdirectory(nix-hash)
add_subdirectory(nix-prefetch-url)
add_subdirectory(nix-log2xml)
add_subdirectory(nix-daemon)
add_subdirectory(nix-store)
add_subdirectory(libmain)
add_subdirectory(bsdiff-4.3)
add_subdirectory(nix-env)
add_subdirectory(nix-instantiate)
