# Functional tests

# Helper script for running the tests
run_test = find_program('run-test.sh')

functional_test_list = [
  'add.sh',
  'bash-profile.sh',
  'binary-cache-build-remote.sh',
  'binary-cache.sh',
  'brotli.sh',
  'build-delete.sh',
  'build-dry.sh',
  'build-remote-content-addressed-fixed.sh',
  'build-remote-content-addressed-floating.sh',
  'build-remote-input-addressed.sh',
  'build.sh',
  'ca/build-with-garbage-path.sh',
  'ca/build.sh',
  'ca/concurrent-builds.sh',
  'ca/duplicate-realisation-in-closure.sh',
  'ca/gc.sh',
  'ca/import-derivation.sh',
  'ca/new-build-cmd.sh',
  'ca/nix-copy.sh',
  'ca/nix-run.sh',
  'ca/nix-shell.sh',
  'ca/post-hook.sh',
  'ca/recursive.sh',
  'ca/repl.sh',
  'ca/signatures.sh',
  'ca/substitute.sh',
  'ca/why-depends.sh',
  'case-hack.sh',
  'check-refs.sh',
  'check-reqs.sh',
  'check.sh',
  'completions.sh',
  'compression-levels.sh',
  'config.sh',
  'db-migration.sh',
  'dependencies.sh',
  'describe-stores.sh',
  'dump-db.sh',
  'eval-store.sh',
  'eval.sh',
  'export-graph.sh',
  'export.sh',
  'fetchClosure.sh',
  'fetchGit.sh',
  'fetchGitRefs.sh',
  'fetchGitSubmodules.sh',
  'fetchMercurial.sh',
  'fetchPath.sh',
  'fetchTree-file.sh',
  'fetchurl.sh',
  'filter-source.sh',
  'fixed.sh',
  'flakes/absolute-paths.sh',
  'flakes/build-paths.sh',
  'flakes/bundle.sh',
  'flakes/check.sh',
  'flakes/circular.sh',
  'flakes/config.sh',
  'flakes/flake-in-submodule.sh',
  'flakes/flakes.sh',
  'flakes/follow-paths.sh',
  'flakes/init.sh',
  'flakes/inputs.sh',
  'flakes/mercurial.sh',
  'flakes/run.sh',
  'flakes/search-root.sh',
  'flakes/show.sh',
  'flakes/unlocked-override.sh',
  'fmt.sh',
  'function-trace.sh',
  'gc-auto.sh',
  'gc-concurrent.sh',
  'gc-non-blocking.sh',
  'gc-runtime.sh',
  'gc.sh',
  'hash.sh',
  'import-derivation.sh',
  'impure-derivations.sh',
  'init.sh',
  'lang.sh',
  'linux-sandbox.sh',
  'local-store.sh',
  'logging.sh',
  'misc.sh',
  'multiple-outputs.sh',
  'nar-access.sh',
  'nix-build.sh',
  'nix-channel.sh',
  'nix-copy-ssh.sh',
  'nix-profile.sh',
  'nix-shell.sh',
  'nix_path.sh',
  'optimise-store.sh',
  'output-normalization.sh',
  'pass-as-file.sh',
  'path-from-hash-part.sh',
  'placeholders.sh',
  'plugins.sh',
  'post-hook.sh',
  'pure-eval.sh',
  'readfile-context.sh',
  'recursive.sh',
  'referrers.sh',
  'remote-store.sh',
  'repair.sh',
  'repl.sh',
  'restricted.sh',
  'search.sh',
  'secure-drv-outputs.sh',
  'selfref-gc.sh',
  'ca/selfref-gc.sh',
  'shell.sh',
  'signing.sh',
  'simple.sh',
  'ssh-relay.sh',
  'store-ping.sh',
  'structured-attrs.sh',
  'substitute-with-invalid-ca.sh',
  'suggestions.sh',
  'tarball.sh',
  'test-infra.sh',
  'timeout.sh',
  'toString-path.sh',
  'user-envs-migration.sh',
  'user-envs.sh',
  'why-depends.sh',
  'zstd.sh']

foreach functional_test : functional_test_list
    test(functional_test,
        run_test,
        is_parallel : false,
        depends : nix_bin,
        suite : 'functional',
        args : functional_test)
endforeach
